[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/1bitpack_kenney_1.2/1bitpack_monochrome_transparent_tiles/tile532.png" type="Texture" id=1]
[ext_resource path="res://Scripts/HealthHUD.gd" type="Script" id=2]

[node name="HealthHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HeartTexture" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -44.0
margin_top = -40.0
margin_right = -4.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture2" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -40.0
margin_right = -44.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture3" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = -40.0
margin_right = -84.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture4" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -164.0
margin_top = -40.0
margin_right = -124.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture5" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -40.0
margin_right = -164.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture6" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -244.0
margin_top = -40.0
margin_right = -204.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture7" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -284.0
margin_top = -40.0
margin_right = -244.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture8" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -324.0
margin_top = -40.0
margin_right = -284.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture9" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -364.0
margin_top = -40.0
margin_right = -324.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartTexture10" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -404.0
margin_top = -40.0
margin_right = -364.0
texture = ExtResource( 1 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}
